--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
-  "name": "freelance-pi-hub-frontend",
-  "version": "0.1.0",
+  "name": "freelance-pi-hub-client",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000",
     "build": "next build",
-    "start": "next start -p 3000",
-    "lint": "eslint ."
+    "start": "next start -p 3000"
   },
   "dependencies": {
-    "axios": "^1.7.2",
+    "axios": "^1.7.7",
     "next": "14.2.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "eslint": "^9.8.0"
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   }
 }
